# pytracer

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: main.py  window.py
